--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ billiard==3.6.1.0
 celery==4.3.0
 Click==7.0
 Flask==1.1.1
+gunicorn==19.9.0
 importlib-metadata==0.19
 itsdangerous==1.1.0
 Jinja2==2.10.1
