--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.7
 
 ADD ./app/ /src/app/
 COPY requirements.txt /
+COPY wsgi.py /src/
 RUN pip3 install -r /requirements.txt
 WORKDIR /src/
 
