--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     client_max_body_size 4G;
 
     # set the correct host(s) for your site
-    server_name example.com www.example.com;
+    server_name 18.221.167.16;
 
     keepalive_timeout 5;
 
